added hotels to travel and updated Our Story

--- a/index.html
+++ b/index.html
@@ -71,10 +71,6 @@
     <section id="introduction">
         <div class="small-nav nav">
             <ul>
-                <!-- Might not be a need for this on mobile -->
-               <!--  <li>
-                    <a class="introduction" href="#introduction">Home</a>
-                </li> -->
                 <li>
                     <a class="about" href="#about">Our Story</a>
                 </li>
@@ -114,7 +110,9 @@
                 <img class="profile-pic" src="images/propose.jpg">
                 <div class="dash animated fadeIn"></div>
                 <p>
-                    <br> It was a dark and stomry night...
+                    <br> <strong> August 10th, 2012 </strong>
+                    <br>
+                    <br> Knowing that this would be a once in a lifetime opportunity to propose to Michelle in front of all of her family, The young stallion Alexander fell to one knee proclaiming his love and intent to marry in the future.
                     <div class="dash animated fadeIn"></div>
                     <p>
                         See the video of the proposal!
@@ -208,9 +206,22 @@
     </section>
     <section id="contact">
         <div class="container">
-            <!--  <i class="fa fa-suitcase"> </i> -->
             <h1>Travel</h1>
-            <p>We know drinking is fun, Sometimes it's so fun that you forget to stop. So here's a list of hotels in the area:</p>
+            <h3>We know drinking is fun, Sometimes it's so fun that you forget to stop. So here's a list of hotels in the area:</h3>
+            <p><strong>Residence Inn Montgomeryville</strong>
+                <br> 1110 Bethlehem Pike
+                <br> North Wales PA, 19454
+                <br> <a href="http://www.marriott.com/hotels/travel/phlmg-residence-inn-philadelphia-montgomeryville/"> Website </a> </p>
+            <div class="dash"></div>
+            <p><strong>Courtyard Montgomeryville</strong>
+                <br> 544 Dekalb Pike
+                <br> North Wales PA, 19454
+                <br><a href="http://www.marriott.com/hotels/travel/phlmm-courtyard-philadelphia-montgomeryville/?scid=bb1a189a-fec3-4d19-a255-54ba596febe2"> Website </a> </p>
+            <div class="dash"></div>
+            <p><strong>Normandy Farm Hotel</strong>
+                <br> 1401 Morris Rd
+                <br> Blue Bell PA, 19422
+                <br><a href="https://bookings.ihotelier.com/Normandy-Farm-Hotel-and-Conference-Center/bookings.jsp?hotelId=6182"> Website </a></p>
     </section>
     <section id="footer">
         <div class="container">
