added video, fixed registry, fonts on page

--- a/index.html
+++ b/index.html
@@ -108,19 +108,18 @@
             <div class="col-md-12 center">
                 <h1>The Engagement</h1>
                 <img class="profile-pic" src="images/propose.jpg">
-                <div class="dash animated fadeIn"></div>
                 <p>
-                    <br> <strong> August 10th, 2012 </strong>
-                    <br>
+                    <br> <strong> August 10th, 2012 </strong> </p>
+                <p>
                     <br> Knowing that this would be a once in a lifetime opportunity to propose to Michelle in front of all of her family, The young stallion Alexander fell to one knee proclaiming his love and intent to marry in the future.
                     <div class="dash animated fadeIn"></div>
                     <p>
-                        See the video of the proposal!
+                        <strong> See the video of the proposal below! </strong>
+                        <br>
+                        <br>
                     </p>
                     <p>
-                        <br>
-                        <a href="#" <i class="fa fa-heart"></i>
-                        </a>
+                        <iframe width="420" height="315" src="https://www.youtube.com/embed/gvCeVEBY5Y8" frameborder="0" allowfullscreen></iframe>
                     </p>
             </div>
         </div>
@@ -137,7 +136,7 @@
                     <h3>Ceremony</h3>
                     <div class="dash"></div>
                     <p>
-                        William Penn Inn
+                        <strong> William Penn Inn </strong>
                         <br> Gwynedd, PA
                         <br> Friday, May 26, 2017
                         <br> 6:00 PM
@@ -152,7 +151,7 @@
                     <h3>Reception</h3>
                     <div class="dash"></div>
                     <p>
-                        William Penn Inn
+                        <strong> William Penn Inn </strong>
                         <br> Gwynedd, PA
                         <br> Friday, May 26, 2017
                         <br> 6:30 PM - 11:30 PM
@@ -211,21 +210,22 @@
             <p><strong>Residence Inn Montgomeryville</strong>
                 <br> 1110 Bethlehem Pike
                 <br> North Wales PA, 19454
-                <br> <a href="http://www.marriott.com/hotels/travel/phlmg-residence-inn-philadelphia-montgomeryville/"> Website </a> </p>
+                <br> <a href="http://www.marriott.com/hotels/travel/phlmg-residence-inn-philadelphia-montgomeryville/" target="_blank"> Website </a> </p>
             <div class="dash"></div>
             <p><strong>Courtyard Montgomeryville</strong>
                 <br> 544 Dekalb Pike
                 <br> North Wales PA, 19454
-                <br><a href="http://www.marriott.com/hotels/travel/phlmm-courtyard-philadelphia-montgomeryville/?scid=bb1a189a-fec3-4d19-a255-54ba596febe2"> Website </a> </p>
+                <br><a href="http://www.marriott.com/hotels/travel/phlmm-courtyard-philadelphia-montgomeryville/?scid=bb1a189a-fec3-4d19-a255-54ba596febe2" target="_blank"> Website </a> </p>
             <div class="dash"></div>
             <p><strong>Normandy Farm Hotel</strong>
                 <br> 1401 Morris Rd
                 <br> Blue Bell PA, 19422
-                <br><a href="https://bookings.ihotelier.com/Normandy-Farm-Hotel-and-Conference-Center/bookings.jsp?hotelId=6182"> Website </a></p>
+                <br><a href="https://bookings.ihotelier.com/Normandy-Farm-Hotel-and-Conference-Center/bookings.jsp?hotelId=6182" target="_blank"> Website </a></p>
     </section>
     <section id="footer">
         <div class="container">
-            <h3>Registry</h3>
+            <h1>Registry</h1>
+            <br>
             <ul>
                 <li class="target">
                     <a href="https://www.target.com" target="_blank">
