--- a/index.html
+++ b/index.html
@@ -119,7 +119,9 @@
                         <br>
                     </p>
                     <p>
-                        <iframe width="420" height="315" src="https://www.youtube.com/embed/gvCeVEBY5Y8" frameborder="0" allowfullscreen></iframe>
+                        <div class='embed-container'>
+                            <iframe src='https://www.youtube.com/embed//gvCeVEBY5Y8' frameborder='0' allowfullscreen></iframe>
+                        </div>
                     </p>
             </div>
         </div>
