fixed font on mobile

--- a/index.html
+++ b/index.html
@@ -106,17 +106,13 @@
             <div class="col-md-12 center">
                 <h1>The Engagement</h1>
                 <img class="profile-pic" src="images/propose.jpg">
+                <div class="dash animated fadeIn"></div>
+                <h2><strong> August 10th, 2012 </strong></h2>
                 <p>
-                    <br>
-                    <br> <strong> August 10th, 2012 </strong> </p>
-                <p>
-                    <br> Knowing that this would be a once in a lifetime opportunity to propose to Michelle in front of all of her family, The young stallion Alexander fell to one knee proclaiming his love and intent to marry in the future.
+                    Knowing that this would be a once in a lifetime opportunity to propose to Michelle in front of all of her family, The young stallion Alexander fell to one knee proclaiming his love and intent to marry in the future.
                     <div class="dash animated fadeIn"></div>
                     <p>
                         <strong> See the video of the proposal below! </strong>
-                        <br>
-                        <br>
-                        <br>
                     </p>
                     <p>
                         <div class='embed-container'>
