--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
     <section id="contact">
         <div class="container">
             <h1>Travel</h1>
-            <h3>We know drinking is fun, Sometimes it's so fun that you forget to stop. So here's a list of hotels in the area:</h3>
+            <h3>We know drinking is fun, Sometimes it's so fun that you forget to stop.<br> So here's a list of hotels in the area:</h3>
             <p><strong>Residence Inn Montgomeryville</strong>
                 <br> 1110 Bethlehem Pike
                 <br> North Wales PA, 19454
