added Our story text, various fixes to animations, text and page

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Michelle and Alexander's Wedding Page">
-    <meta name="keywords" content="Alexander Lee Rivera, Michelle Surillo, , Rivera Wedding, Surillo Wedding, Wedding, William Penn Inn, Rivera Surillo Wedding" />
-    <meta name="image" content="images/michelleandalexander.jpg">
+    <meta name="keywords" content="Alexander Lee Rivera, Michelle Surillo, Rivera Wedding, Surillo Wedding, Wedding, William Penn Inn, Rivera Surillo Wedding" />
+    <meta name="image" content="../images/calipic.jpg">
     <meta name="url" content="alexander-michelle.com" <link rel="canonical" href="index.html">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/animate.min.css">
@@ -41,17 +41,17 @@
                     </a>
                 </li>
                 <li>
-                    <a class="about" href="#">
+                    <a class="story" href="#">
                         <i class="fa fa-user"></i>Our Story
                     </a>
                 </li>
                 <li>
-                    <a class="interests" href="#">
+                    <a class="wedding" href="#">
                         <i class="fa fa-heart"></i>Wedding
                     </a>
                 </li>
                 <li>
-                    <a class="contact" href="#">
+                    <a class="travel" href="#">
                         <i class="fa fa-suitcase"></i>Travel
                     </a>
                 </li>
@@ -70,12 +70,12 @@
         <div class="small-nav nav">
             <ul>
                 <li>
-                    <a class="about" href="#about">Our Story</a>
+                    <a class="story" href="#story">Our Story</a>
                 </li>
-                <li> <a class="interests" href="#interests">Wedding</a>
+                <li> <a class="wedding" href="#wedding">Wedding</a>
                 </li>
                 <li>
-                    <a class="contact" href="#contact">Travel</a>
+                    <a class="travel" href="#travel">Travel</a>
                 </li>
                 <li>
                     <a class="footer" href="#footer">Registry</a>
@@ -83,37 +83,40 @@
             </ul>
         </div>
         <div class="brand">
-            <h1 class="animated fadeInUp">We are getting married!</h1>
-            <h2 class="animated fadeInUp">May 26th, 2017</h2>
+            <h1 class="animated fadeInUp">Michelle <br> + <br> Alexander</h1>
+            <h2 class="animated fadeInUp"><strong>May 26th, 2017</strong></h2>
         </div>
     </section>
-    <section id="about">
+    <section id="story">
         <div class="container">
             <div class="col-md-12 center">
-                <h1><i>Our Story</i></h1>
+                <h1 class="animated fadeInUp">Our Story</h1>
+                <img class="profile-pic" src="images/calipic.jpg">
                 <div class="dash animated fadeIn"></div>
-                <h3> This site is currently under construction! </h3>
-                <br>
+                <h3>
+                    How we met
+                </h3>
                 <div class="dash animated fadeIn"></div>
-                <p>Maybe it was love at first sight..
+                <p>
+                    Though Michelle and Alexander shared mutual friends, they never were introduced to one another. On one fateful night in October of 2011, Alexander sat in the frequented pizza shop Big Al's with his friends when he stumbled upon Michelle's Facebook profile. Intrigued by her scandalous profile picture, Alexander asked about Michelle and learned that his friends went to elementary school with her. That night, powerful words were spoken by Greg Mol to the effect: <i>"You don't have a chance with her"</i>. Taking this as a personal challenge, Alexander added Michelle and eventually met with her in person. Love knew no time as they fell madly in love with each other...
                 </p>
             </div>
         </div>
         </div>
     </section>
-    <section id="about">
+    <section id="story">
         <div class="container">
             <div class="col-md-12 center">
-                <h1>The Engagement</h1>
-                <img class="profile-pic" src="images/propose.jpg">
                 <div class="dash animated fadeIn"></div>
+                <h3>The Engagement</h3>
+                <div class="dash animated fadeIn"></div>
+                <img class="profile-pic" src="images/propose.jpg">
+                <br>
+                <br>
                 <h2><strong> August 10th, 2012 </strong></h2>
                 <p>
-                    Knowing that this would be a once in a lifetime opportunity to propose to Michelle in front of all of her family, The young stallion Alexander fell to one knee proclaiming his love and intent to marry in the future.
-                    <div class="dash animated fadeIn"></div>
-                    <p>
-                        <strong> See the video of the proposal below! </strong>
-                    </p>
+                    Knowing that this would be a once in a lifetime opportunity to propose to Michelle in front of all of her family just as she always dreamed, The young stallion Alexander fell to one knee proclaiming his love and intent to marry Michelle at their baby shower for Lillianna. With tears of joy, Michelle said yes. In September of 2012, Lillianna Lee was born. Several years later, Michelle gave birth to Kaiden Alexander in May of 2016.
+                    <h2><strong> See the video of the proposal below! </strong></h2>
                     <p>
                         <div class='embed-container'>
                             <iframe src='https://www.youtube.com/embed//gvCeVEBY5Y8' frameborder='0' allowfullscreen></iframe>
@@ -123,7 +126,7 @@
         </div>
         </div>
     </section>
-    <section id="interests">
+    <section id="wedding">
         <div class="container">
             <h1>Wedding</h1>
             <div class="row">
@@ -131,7 +134,7 @@
                     <div class="flaticon">
                         <i class="fa fa-heart-o"></i>
                     </div>
-                    <h3>Ceremony</h3>
+                    <h3 class="animated fadeInUp">Ceremony</h3>
                     <div class="dash"></div>
                     <p>
                         <strong> William Penn Inn </strong>
@@ -146,7 +149,7 @@
                     <div class="flaticon">
                         <i class="fa fa-glass"></i>
                     </div>
-                    <h3>Reception</h3>
+                    <h3 class="animated fadeInUp">Reception</h3>
                     <div class="dash"></div>
                     <p>
                         <strong> William Penn Inn </strong>
@@ -159,9 +162,9 @@
             </div>
     </section>
     <br>
-    <section id="interests">
+    <section id="wedding">
         <div class="container">
-            <h1>Bridal Party</h1>
+            <h1 class="animated fadeInDown">Bridal Party</h1>
             <div class="row">
                 <div class="column col-md-6">
                     <div class="flaticon">
@@ -201,7 +204,7 @@
                 </div>
             </div>
     </section>
-    <section id="contact">
+    <section id="travel">
         <div class="container">
             <h1>Travel</h1>
             <h3>We know drinking is fun, Sometimes it's so fun that you forget to stop.<br> So here's a list of hotels in the area:</h3>
