fixed text in engagement section

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 </h3>
                 <div class="dash animated fadeIn"></div>
                 <p>
-                    Though Michelle and Alexander shared mutual friends, they never were introduced to one another. On one fateful night in October of 2011, Alexander sat in the frequented pizza shop Big Al's with his friends when he stumbled upon Michelle's Facebook profile. Intrigued by her scandalous profile picture, Alexander asked about Michelle and learned that his friends went to elementary school with her. That night, powerful words were spoken by Greg Mol to the effect: <i><strong>"You don't have a chance with her"</i></strong>. Taking this as a personal challenge, Alexander added Michelle and eventually met with her in person. Love knew no time as they fell madly in love with each other...
+                    Though Michelle and Alexander shared mutual friends, they never were introduced to one another. On one fateful night in October of 2011, Alexander sat in the frequented pizza shop Big Al's with his friends when he stumbled upon Michelle's Facebook profile. Intrigued by her scandalous profile picture, Alexander asked about Michelle and learned that his friends went to elementary school with her. That night, powerful words were spoken by Greg Mol to the effect: <i><b>"You don't have a chance with her"</i></b>. Taking this as a personal challenge, Alexander added Michelle and eventually met with her in person. Love knew no time as they fell madly in love with each other...
                 </p>
             </div>
         </div>
