fixed text for mobile

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <h2><strong> August 10th, 2012 </strong></h2>
                 <p>
                     Knowing that this would be a once in a lifetime opportunity to propose to Michelle in front of all of her family just as she always dreamed, The young stallion Alexander fell to one knee proclaiming his love and intent to marry Michelle at their baby shower for Lillianna. With tears of joy, Michelle said yes. In September of 2012, Lillianna Lee was born. Several years later, Michelle gave birth to Kaiden Alexander in May of 2016.
-                    <h2><strong> See the video of the proposal below! </strong></h2>
+                    <h2><strong> See the proposal video below! </strong></h2>
                     <p>
                         <div class='embed-container'>
                             <iframe src='https://www.youtube.com/embed//gvCeVEBY5Y8' frameborder='0' allowfullscreen></iframe>
