--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
                         <br> Gwynedd, PA
                         <br> Friday, May 26, 2017
                         <br> 6:30 PM - 11:30 PM
+                        <br> Attire: Formal
                     </p>
                     <div class="dash"></div>
                 </div>
@@ -207,23 +208,24 @@
     <section id="travel">
         <div class="container">
             <h1>Travel</h1>
-            <h3>We plan to be moderately obliterated. You may plan on being completely obliterated.<br> So here's a list of hotels in the area:</h3>
+            <h3>We plan to be moderately obliterated. You may plan on being completely obliterated.<br> We are planning on staying at the Hyatt House ourselves which is about 20 minutes from the venue.<br>Here's a list of hotels in the area:</h3>
+            <p><strong> Hyatt House East Norriton</strong>
+                <br> 501 E Germantown Pike
+                <br> East Norriton PA, 19401
+                <br><a href="https://plymouthmeeting.house.hyatt.com/en/hotel/home.html" target="_blank"> Website </a></p>
+            <div class="dash"></div>
             <p><strong>Residence Inn Montgomeryville</strong>
                 <br> 1110 Bethlehem Pike
                 <br> North Wales PA, 19454
                 <br> <a href="http://www.marriott.com/hotels/travel/phlmg-residence-inn-philadelphia-montgomeryville/" target="_blank"> Website </a> </p>
             <div class="dash"></div>
-            <p><strong>Courtyard Montgomeryville</strong>
+            <p><strong>Courtyard Marriott Montgomeryville</strong>
                 <br> 544 Dekalb Pike
                 <br> North Wales PA, 19454
                 <br><a href="http://www.marriott.com/hotels/travel/phlmm-courtyard-philadelphia-montgomeryville/?scid=bb1a189a-fec3-4d19-a255-54ba596febe2" target="_blank"> Website </a> </p>
             <div class="dash"></div>
-            <p><strong>Normandy Farm Hotel</strong>
-                <br> 1401 Morris Rd
-                <br> Blue Bell PA, 19422
-                <br><a href="https://bookings.ihotelier.com/Normandy-Farm-Hotel-and-Conference-Center/bookings.jsp?hotelId=6182" target="_blank"> Website </a></p>
             <br>
-            <h3> * There will be shuttles after the reception to hotels in the area *
+            <h3> * We plan to head to center city after the reception to keep the party alive *
     </section>
     <section id="footer">
         <div class="container">
