Righting some wrongs

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                     <div class="dash"></div>
                     <p>
                         Michael L. Rivera
-                        <br> Luis Ortiz
+                        <br> <strong>Luis Ortiz</strong> <!-- Sexy af -->
                         <br> Efren Rivera
                         <br> Kevin Rivera
                         <br> Manouk Hovhannesian
