removed Registry, added RSVP

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </li>
                 <li>
                     <a class="footer" href="#">
-                        <i class="fa fa-envelope-o"></i>Registry
+                        <i class="fa fa-envelope-o"></i>RSVP
                     </a>
                 </li>
             </ul>
@@ -78,7 +78,7 @@
                     <a class="travel" href="#travel">Travel</a>
                 </li>
                 <li>
-                    <a class="footer" href="#footer">Registry</a>
+                    <a class="footer" href="#footer">RSVP</a>
                 </li>
             </ul>
         </div>
@@ -218,22 +218,9 @@
     </section>
     <section id="footer">
         <div class="container">
-            <h1>Registry</h1>
+            <h1>RSVP</h1>
             <br>
-            <ul>
-                <li class="target">
-                    <a href="http://www.target.com/gift-registry/registry/PUZcmdQBz-LBVKrohPHR-g?lnk=copiedLink" target="_blank">
-                        <i class="fa fa-bullseye"></i>
-                        <p>Target</p>
-                    </a>
-                </li>
-                <li class="amazon">
-                    <a href="https://www.amazon.com/wedding/alexander-rivera-michelle-surillo-gwynedd-may-2017/registry/1KN57FNRWAMF4" target="_blank">
-                        <i class="fa fa-amazon"></i>
-                        <p>Amazon</p>
-                    </a>
-                </li>
-            </ul>
+            <p> Please check back soon, we will be providing a link for you to RSVP </p>
             <div class="license">
                 2016 © Alexander L. Rivera
             </div>
