updated travel section

--- a/index.html
+++ b/index.html
@@ -208,13 +208,15 @@
     <section id="travel">
         <div class="container">
             <h1>Travel</h1>
-            <h3>We plan to be moderately obliterated. You may plan on being completely obliterated.<br> We will be staying at the Hyatt House  which is about 20 minutes from the venue.<br>Here's the link:</h3>
+            <h3>We plan to be moderately obliterated. You may plan on being completely obliterated.<br> We will be staying at the Hyatt House which is about 20 minutes from the venue.<br> Please note that this hotel requires at least <strong> 2 </strong> nights to be booked. We plan on staying from:
+             <br>Thursday, May 25th - Sunday, May 28th. <br><br>Here's the address below:</h3>
             <p><strong> Hyatt House East Norriton</strong>
                 <br> 501 E Germantown Pike
                 <br> East Norriton PA, 19401
-                <br><a href="https://plymouthmeeting.house.hyatt.com/en/hotel/home.html" target="_blank"> Website </a></p>
-            <br>
-            <h3> * We intend to head to center city after the reception to keep the party alive *
+                <!-- <br><a href="https://plymouthmeeting.house.hyatt.com/en/hotel/home.html" target="_blank"> Website </a></p> -->
+                <br>
+                <h3> ** We will be adding a link with a group code so you get the discount with us, check back soon! ** </h3>
+                <h3> * We intend to head to center city after the reception to keep the party alive * </h3>
     </section>
     <section id="footer">
         <div class="container">
