updated font in travel

--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
                 <br> 501 E Germantown Pike
                 <br> East Norriton PA, 19401
                 <br>
-                <br> Please note that your room <strong>must be booked by 4/28/17 for a minimum of 2 nights</strong>. We plan on staying from:
-                <br><strong>Thursday, May 25th - Sunday, May 28th.</strong>
+                <br> <strong> Please note that your room must be booked by 4/28/17 for a minimum of 2 nights. We plan on staying from:
+                <br>Thursday, May 25th - Sunday, May 28th.</strong>
                 <br>
                 <br>
                 Click the icon below to book
