--- a/index.html
+++ b/index.html
@@ -217,10 +217,10 @@
                 <br> <strong> Please note that your room must be booked by 4/28/17 for a minimum of 2 nights. We plan on staying from:
                 <br>Thursday, May 25th - Sunday, May 28th.</strong>
                 <br>
+                <br> Click the icon below to book
                 <br>
-                Click the icon below to book
+                <a href="https://plymouthmeeting.house.hyatt.com/phlxpgsrwd2017.html" target="_blank"><i class="fa fa-bed" aria-hidden="true"><br></i></a>
                 <br>
-                <a href="https://plymouthmeeting.house.hyatt.com/phlxpgsrwd2017.html" target="_blank"><i class="fa fa-bed" aria-hidden="true"><br></i></a><br>  
             </p>
             <h3> * We intend to head to center city after the reception to keep the party alive * </h3>
     </section>
@@ -228,7 +228,17 @@
         <div class="container">
             <h1>RSVP</h1>
             <br>
-            <p> Please check back soon, we will be providing a link for you to RSVP </p>
+            <p>
+                <script type="text/javascript" src="http://app.rsvpify.com/embed/500005631"></script>
+                <script type="text/javascript" src="http://app.rsvpify.com/js/iframeResizer.min.js"></script>
+                <script type="text/javascript">
+                iFrameResize({
+                    autoResize: true,
+                    heightCalculationMethod: 'max',
+                    enablePublicMethods: true
+                }, "#RSVPifyIFrame");
+                </script>
+            </p>
             <div class="license">
                 2016 © Alexander L. Rivera
             </div>
