added RSVP links, fixed travel section

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <meta name="url" content="alexander-michelle.com" <link rel="canonical" href="index.html">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/animate.min.css">
-    <link href="font-awesome-4.5.0/css/font-awesome.css" rel="stylesheet">
-    <link href="font-awesome-4.5.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet">
+    <link href="font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/overrides.css">
@@ -217,9 +217,8 @@
                 <br> <strong> Please note that your room must be booked by 4/28/17 for a minimum of 2 nights. We plan on staying from:
                 <br>Thursday, May 25th - Sunday, May 28th.</strong>
                 <br>
-                <br> Click the icon below to book
                 <br>
-                <a href="https://plymouthmeeting.house.hyatt.com/phlxpgsrwd2017.html" target="_blank"><i class="fa fa-bed" aria-hidden="true"><br></i></a>
+                <a href="https://plymouthmeeting.house.hyatt.com/phlxpgsrwd2017.html" target="_blank"><i class="fa fa-bed" aria-hidden="true"><br></i><br>Click here to book</a>
                 <br>
             </p>
             <h3> * We intend to head to center city after the reception to keep the party alive * </h3>
@@ -228,16 +227,16 @@
         <div class="container">
             <h1>RSVP</h1>
             <br>
+            <h3> If you were invited to our <b>ceremony and reception</b>, please RSVP using the link below:</h3>
             <p>
-                <script type="text/javascript" src="http://app.rsvpify.com/embed/500005631"></script>
-                <script type="text/javascript" src="http://app.rsvpify.com/js/iframeResizer.min.js"></script>
-                <script type="text/javascript">
-                iFrameResize({
-                    autoResize: true,
-                    heightCalculationMethod: 'max',
-                    enablePublicMethods: true
-                }, "#RSVPifyIFrame");
-                </script>
+                <a href="http://michellealexander.rsvpify.com" target="_blank"><i class="fa fa-envelope-open" aria-hidden="true"></i><br>Click here to RSVP to the Ceremony &amp; Reception</a>
+            </p>
+            <br>
+            <div class="dash"></div>
+            <br><br>
+            <h3>If you were invited to the <b>rehearsal dinner</b> as well please RSVP using the link below:</h3>
+            <p>
+                <a href="http://marehearsal.rsvpify.com" target="_blank"><i class="fa fa-envelope-open" aria-hidden="true"></i><br>Click here to RSVP to the Rehearsal Dinner</a>
             </p>
             <div class="license">
                 2016 © Alexander L. Rivera
